lock -> disabled
